--- a/src/index.css
+++ b/src/index.css
@@ -33,18 +33,18 @@
   body {
     background-color: #ededed;
     color: var(--color-foreground);
+    font-family: "Inter", system-ui, sans-serif;
   }
 }
 
 html,
 body,
 #root {
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 /* Hotspot Styles */
@@ -146,8 +146,8 @@ body,
 
 .back-button-container {
   position: fixed;
-  bottom: 25px;
-  right: 20rem;
+  bottom: 32px;
+  left: 50%;
   transform: translateX(-50%);
   z-index: 1000;
   pointer-events: none;
